fix login on tablet

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,8 @@ body {
 
 } */
 
+img.animate__animated.animate__hinge.css-2qe138{
+  position: relative;
+  z-index: 0;
+}
+
